// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`mergeWith() > empty->entity with pattern 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": "a-pattern",
      "fields": [],
      "name": "Foo",
      "nameField": null,
    },
  ],
  "indexes": [],
  "patterns": [
    {
      "name": "a-pattern",
      "pattern": "^hello$",
    },
  ],
  "valueTypes": [],
}
`;

exports[`mergeWith() > field with index 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "index": "unique-index",
          "list": false,
          "matchPattern": null,
          "multiline": false,
          "name": "title",
          "required": false,
          "type": "String",
        },
      ],
      "name": "Foo",
      "nameField": null,
    },
  ],
  "indexes": [
    {
      "name": "unique-index",
      "type": "unique",
    },
  ],
  "patterns": [],
  "valueTypes": [],
}
`;

exports[`mergeWith() > field with matchPattern 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "index": null,
          "list": false,
          "matchPattern": "a-pattern",
          "multiline": false,
          "name": "title",
          "required": false,
          "type": "String",
        },
      ],
      "name": "Foo",
      "nameField": null,
    },
  ],
  "indexes": [],
  "patterns": [
    {
      "name": "a-pattern",
      "pattern": "^pattern$",
    },
  ],
  "valueTypes": [],
}
`;

exports[`mergeWith() > unused index is removed 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [],
      "name": "Foo",
      "nameField": null,
    },
  ],
  "indexes": [],
  "patterns": [],
  "valueTypes": [],
}
`;

exports[`mergeWith() > unused pattern is removed 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [],
      "name": "Foo",
      "nameField": null,
    },
  ],
  "indexes": [],
  "patterns": [],
  "valueTypes": [],
}
`;

exports[`mergeWith() > update pattern 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": "a-pattern",
      "fields": [],
      "name": "Foo",
      "nameField": null,
    },
  ],
  "indexes": [],
  "patterns": [
    {
      "name": "a-pattern",
      "pattern": "^new-pattern$",
    },
  ],
  "valueTypes": [],
}
`;
